--- a/www/templates/sidebar.html
+++ b/www/templates/sidebar.html
@@ -1,19 +1,15 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-royal">
-
-      <ion-nav-back-button></ion-nav-back-button>
-
+      <ion-nav-back-button>
+      </ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
-     </ion-nav-bar>
-
-    <ion-nav-view name="menuContent"></ion-nav-view>
-
+    </ion-nav-bar>
+    <ion-nav-view name="mainContent"></ion-nav-view>
   </ion-side-menu-content>
-
   <ion-side-menu side="left">
     <ion-header-bar class="bar-positive">
       <h1 class="title">Navigation</h1>
@@ -23,7 +19,7 @@
         <ion-item menu-close href="#/app/home">
           Home
         </ion-item>
-        <ion-item menu-close ui-sref="app.aboutus">
+        <ion-item menu-close href="#/app/aboutus">
           About Us
         </ion-item>
         <ion-item menu-close href="#/app/menu">
